Fix UI text overlapping

--- a/src/features/courses/Courses.css
+++ b/src/features/courses/Courses.css
@@ -102,7 +102,7 @@
 }
 
 .course-card {
-  height: 280px;
+  height: 350px;
   width: 240px;
   border-radius: 6px;
   /* padding: 15px; */
@@ -128,7 +128,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 200px;
+  height: 270px;
 }
 
 .course-card h2 {
